--- a/203186_DataScienceProject.ipynb
+++ b/203186_DataScienceProject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oXE4D1gDnJBGQYM1VTq5kZNvnx77pH3l",
-      "authorship_tag": "ABX9TyPMKZA9dqzYmWDXTlIEO7uz",
+      "authorship_tag": "ABX9TyOLlVQCjz83a6RcZo9XGzKC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -940,6 +940,78 @@
           },
           "metadata": {},
           "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# *Модел 1: Линеарна регресија*"
+      ],
+      "metadata": {
+        "id": "Y0N2wQE_4RuL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import r2_score"
+      ],
+      "metadata": {
+        "id": "8ashGvO74mNZ"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculateLinearRegressionScore(x,y):\n",
+        "    model = LinearRegression()\n",
+        "    #60:40\n",
+        "    X_train,X_test,Y_train,Y_test = train_test_split(x,y,test_size=0.4)\n",
+        "\n",
+        "    scaler = StandardScaler()\n",
+        "    scaler.fit(X_train)\n",
+        "\n",
+        "    X_train = scaler.transform(X_train)\n",
+        "    X_test = scaler.transform(X_test)\n",
+        "\n",
+        "    model.fit(X_train,Y_train)\n",
+        "    y_pred = model.predict(X_test)\n",
+        "    print(y_pred.tolist())\n",
+        "    print('Accuracy of linear regression classifier on test set: {:.3f}'.format(r2_score(Y_test, y_pred)))\n"
+      ],
+      "metadata": {
+        "id": "AHQilJ3P4bEn"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculateLinearRegressionScore(x,y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NVbrQhu59UyD",
+        "outputId": "b4a765a8-5ea7-4e9c-e4d6-977cc0c22151"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7.981423220163211, 1.6100208439704575, 29.199935531323035, 3.0118726491596624, 3.0118726491596624, 9.998744914057959, 12.87376540468463, 2.9806910830163584, 5.248451695034285, 4.561330074325866]\n",
+            "Accuracy of linear regression classifier on test set: 1.000\n"
+          ]
         }
       ]
     }
