modified calculateLinearRegressionScore method

--- a/203186_DataScienceProject.ipynb
+++ b/203186_DataScienceProject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oXE4D1gDnJBGQYM1VTq5kZNvnx77pH3l",
-      "authorship_tag": "ABX9TyP6LLy5ZKBrp3xdc7PTqC9e",
+      "authorship_tag": "ABX9TyNLTT2+RqlytW8OMnk5d2cB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -944,6 +944,48 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "tAS8EdjcXJH1"
+      },
+      "execution_count": 144,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def createDataFrame(original, prediciton):\n",
+        "  ids = []\n",
+        "  prices2023 = []\n",
+        "  data = []\n",
+        "\n",
+        "  for i in range(0,len(original)):\n",
+        "    ids.append(original.index[i])\n",
+        "    prices2023.append(original[original.index[i]])\n",
+        "\n",
+        "\n",
+        "  temp =np.array(prediciton)\n",
+        "  for i in range(0, len(ids)):\n",
+        "    item = {}\n",
+        "    item['ProductID'] = ids[i]\n",
+        "    item['Price 2023'] = prices2023[i]\n",
+        "    item['Predicted Price 2023'] = round(temp[i],2)\n",
+        "    data.append(item)\n",
+        "\n",
+        "\n",
+        "  data = pd.DataFrame(data)\n",
+        "  print(data)\n"
+      ],
+      "metadata": {
+        "id": "Ma0wW9HjTG44"
+      },
+      "execution_count": 145,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# *Модел 1: Линеарна регресија*"
@@ -963,7 +1005,7 @@
       "metadata": {
         "id": "8ashGvO74mNZ"
       },
-      "execution_count": 9,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -982,13 +1024,15 @@
         "\n",
         "    model.fit(X_train,Y_train)\n",
         "    y_pred = model.predict(X_test)\n",
-        "    print(y_pred.tolist())\n",
-        "    print('Accuracy of linear regression classifier on test set: {:.3f}'.format(r2_score(Y_test, y_pred)))\n"
+        "\n",
+        "    createDataFrame(Y_test, y_pred)\n",
+        "\n",
+        "    print('Accuracy of linear regression on test set: {:.3f}'.format(r2_score(Y_test, y_pred)))\n"
       ],
       "metadata": {
         "id": "AHQilJ3P4bEn"
       },
-      "execution_count": 10,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -1001,19 +1045,47 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NVbrQhu59UyD",
-        "outputId": "b4a765a8-5ea7-4e9c-e4d6-977cc0c22151"
+        "outputId": "944468fd-5918-4d69-87cd-b249421ed66a"
       },
-      "execution_count": null,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[7.981423220163211, 1.6100208439704575, 29.199935531323035, 3.0118726491596624, 3.0118726491596624, 9.998744914057959, 12.87376540468463, 2.9806910830163584, 5.248451695034285, 4.561330074325866]\n",
-            "Accuracy of linear regression classifier on test set: 1.000\n"
+            "   ProductID  Price 2023  Predicted Price 2023\n",
+            "0         20        7.78                  7.81\n",
+            "1         15       12.87                 12.93\n",
+            "2         17        3.01                  3.18\n",
+            "3         11        5.25                  4.43\n",
+            "4         18        3.01                  3.18\n",
+            "5          6        1.61                  1.60\n",
+            "6         24        4.98                  5.12\n",
+            "7         19        2.15                  2.30\n",
+            "8         12        1.03                  0.93\n",
+            "9         22        3.58                  3.85\n",
+            "Accuracy of linear regression on test set: 0.992\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tJ4Bzdo_Mh48"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SlOURUA2B04q"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
