--- a/Scraping_data.ipynb
+++ b/Scraping_data.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1JRFbQZNpeakJoux-d7RZppvBBQZW5QcU",
-      "authorship_tag": "ABX9TyPwu4zsYNYWvCr9nrskDO+a",
+      "authorship_tag": "ABX9TyMxm9a9prCdLDqkpIuSy+76",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "wDv6jnQwJtSh"
       },
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "OcIBrCAaJ5Mo"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -75,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBOFx6QWJ_HM",
-        "outputId": "3d08a18d-c7f4-4326-a66a-12ad0d08ce97"
+        "outputId": "8f5c6435-a1ac-4c1e-f430-ba783f1357ea"
       },
-      "execution_count": 38,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 4
         }
       ]
     },
@@ -100,12 +100,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 70
         },
         "id": "uXlIwQfKKISn",
-        "outputId": "cc32c80d-ad13-47c0-de6d-53579f36b9c1"
+        "outputId": "43442ac2-e586-4dc7-e929-6485d1f9a9a5"
       },
-      "execution_count": 39,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,7 +118,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 5
         }
       ]
     },
@@ -130,29 +130,29 @@
       "metadata": {
         "id": "Yy8BTCxQKS98"
       },
-      "execution_count": 40,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "table = html.find_all(\"table\", {\"class\":\"data_wide_table new_bar_table\"})"
+        "table = html.find(\"table\", {\"class\":\"data_wide_table new_bar_table\"})"
       ],
       "metadata": {
         "id": "hViFHqL3KUTC"
       },
-      "execution_count": 47,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "allRows = table[0].select(\"tr\")"
+        "allRows = table.select(\"tr\")"
       ],
       "metadata": {
         "id": "O95JQcfEKM4X"
       },
-      "execution_count": 55,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -165,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vUzQraDpXy7d",
-        "outputId": "52fa436f-7f90-430d-b6c4-1788e2ba925c"
+        "outputId": "57c2af56-f4af-4032-84e2-8268742372bb"
       },
-      "execution_count": 59,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 10
         }
       ]
     },
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "4PGyKGQMW32e"
       },
-      "execution_count": 69,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -211,9 +211,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Qz-6kkBY350",
-        "outputId": "b398e4c9-c16c-4aef-8a2e-1b10cc02d734"
+        "outputId": "085e1628-5551-4179-9e6d-074ba3f2a3e9"
       },
-      "execution_count": 64,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 12
         }
       ]
     },
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-s2BBwZ8Y6Va",
-        "outputId": "085182fd-56b3-4228-bcb3-2320334f8d70"
+        "outputId": "36cc427c-96dc-4621-d795-859caf260615"
       },
-      "execution_count": 70,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 13
         }
       ]
     },
@@ -301,9 +301,9 @@
           "height": 488
         },
         "id": "UqmJvg5rVaTr",
-        "outputId": "e25d7d82-b779-44d1-f71a-12e035196b99"
+        "outputId": "ffc30d37-88f4-4d03-b318-d34b690d00ae"
       },
-      "execution_count": 72,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +343,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a8d86a06-ccc8-465f-a898-34e102b71830\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-29b14932-51a3-4b4f-939d-519f9d19c4b5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -473,7 +473,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a8d86a06-ccc8-465f-a898-34e102b71830')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29b14932-51a3-4b4f-939d-519f9d19c4b5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -525,12 +525,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a8d86a06-ccc8-465f-a898-34e102b71830 button.colab-df-convert');\n",
+              "        document.querySelector('#df-29b14932-51a3-4b4f-939d-519f9d19c4b5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a8d86a06-ccc8-465f-a898-34e102b71830');\n",
+              "        const element = document.querySelector('#df-29b14932-51a3-4b4f-939d-519f9d19c4b5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -550,8 +550,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-59114830-dbaf-4cfc-b506-08127045a3d5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-59114830-dbaf-4cfc-b506-08127045a3d5')\"\n",
+              "<div id=\"df-51be08fd-2183-49d9-8cbc-52996825be54\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-51be08fd-2183-49d9-8cbc-52996825be54')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -602,7 +602,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-59114830-dbaf-4cfc-b506-08127045a3d5 button');\n",
+              "        document.querySelector('#df-51be08fd-2183-49d9-8cbc-52996825be54 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -613,7 +613,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 14
         }
       ]
     },
@@ -625,7 +625,7 @@
       "metadata": {
         "id": "WXJ7hzFhbFbC"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     }
   ]
