--- a/203186_DataScienceProject.ipynb
+++ b/203186_DataScienceProject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oXE4D1gDnJBGQYM1VTq5kZNvnx77pH3l",
-      "authorship_tag": "ABX9TyMJWQyzgWLJsr7FGyS339hu",
+      "authorship_tag": "ABX9TyPLzvh2206DPov2/zrMljfw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1243,7 +1243,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# *Banchmark*"
+        "# *Benchmark*"
       ],
       "metadata": {
         "id": "RgIVOubg1Ryk"
